<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".NewPlayActivity">

    <TextView
        android:id="@+id/mines_left"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="427dp"
        android:gravity="clip_horizontal|center"
        android:text="@string/play_mines"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/game_over"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tabMode"
        android:layout_width="319dp"
        android:layout_height="319dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="297dp"
        android:gravity="center"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mines_left" />

    <Button
        android:id="@+id/button_free"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="26dp"
        android:gravity="center"
        android:text="@string/free"
        android:textColor="@color/black"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/game_over"
        app:layout_constraintEnd_toStartOf="@+id/button_mine"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabMode"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_mine"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="26dp"
        android:gravity="center"
        android:text="@string/mine"
        android:textColor="@color/black"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/game_over"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabMode" />

    <TextView
        android:id="@+id/game_over"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="162dp"
        android:text="@string/game_over"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        android:textColor="@color/red"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mines_left" />

    <Button
        android:id="@+id/button_back2"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="@color/red"
        android:gravity="center"
        android:text="@string/back_to_main"
        android:textColor="@color/black"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/restart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_over" />

    <Button
        android:id="@+id/restart"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="64dp"
        android:gravity="center"
        android:text="@string/play_again"
        android:textColor="@color/black"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_over" />


</androidx.constraintlayout.widget.ConstraintLayout>